--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -167,8 +167,8 @@ Running title: DNA and protein isolation from macrophyte surfaces
 \setlength\parindent{24pt}
 \doublespacing
 
-\hypertarget{summary}{%
-\subsection{Summary}\label{summary}}
+\hypertarget{abstract}{%
+\subsection{Abstract}\label{abstract}}
 
 Studies of unculturable microbes often combine methods such as 16S rRNA
 sequencing, metagenomics and metaproteomics. To apply these techniques
