--- a/submission/references.bib
+++ b/submission/references.bib
@@ -145,7 +145,7 @@
   shorttitle = {Ribosomal {{Database Project}}},
   author = {Cole, James R. and Wang, Qiong and Fish, Jordan A. and Chai, Benli and McGarrell, Donna M. and Sun, Yanni and Brown, C. Titus and Porras-Alfaro, Andrea and Kuske, Cheryl R. and Tiedje, James M.},
   date = {2014-01-01},
-  journaltitle = {Nucleic Acids Res},
+  journaltitle = {Nucleic Acids Res.},
   volume = {42},
   pages = {D633-D642},
   issn = {0305-1048},
@@ -187,7 +187,7 @@
 
 @article{Cucio2018,
   title = {Metagenomic Analysis Shows the Presence of Bacteria Related to Free-Living Forms of Sulfur-Oxidizing Chemolithoautotrophic Symbionts in the Rhizosphere of the Seagrass {{{\emph{Zostera marina}}}}},
-  author = {C\'ucio, Catarina and Overmars, Lex and Engelen, Aschwin H. and Muyzer, Gerard},
+  author = {Cúcio, Catarina and Overmars, Lex and Engelen, Aschwin H. and Muyzer, Gerard},
   date = {2018},
   journaltitle = {Front. Mar. Sci.},
   volume = {5},
@@ -238,6 +238,21 @@
   number = {1-3}
 }
 
+@article{Hanshew2013,
+  title = {Minimization of Chloroplast Contamination in {{16S rRNA}} Gene Pyrosequencing of Insect Herbivore Bacterial Communities},
+  author = {Hanshew, Alissa S. and Mason, Charles J. and Raffa, Kenneth F. and Currie, Cameron R.},
+  date = {2013-11},
+  journaltitle = {J. Microbiol. Methods},
+  volume = {95},
+  pages = {149--155},
+  issn = {1872-8359},
+  doi = {10.1016/j.mimet.2013.08.007},
+  keywords = {16S rRNA Gene,454 Pyrosequencing,Animals,Bacteria,Base Sequence,Chloroplast,DNA Primers,DNA; Bacterial,DNA; Chloroplast,Herbivory,Insect,Insecta,Molecular Sequence Data,RNA; Ribosomal; 16S,Sequence Alignment,Sequence Analysis; DNA,Symbiosis},
+  langid = {english},
+  number = {2},
+  pmcid = {PMC4133986}
+}
+
 @article{Huerta-Cepas2017,
   title = {Fast Genome-Wide Functional Annotation through Orthology Assignment by {{eggNOG}}-Mapper},
   author = {Huerta-Cepas, Jaime and Forslund, Kristoffer and Coelho, Luis Pedro and Szklarczyk, Damian and Jensen, Lars Juhl and von Mering, Christian and Bork, Peer},
@@ -257,9 +272,9 @@
 @article{Huerta-Cepas2019,
   title = {{{eggNOG}} 5.0: A Hierarchical, Functionally and Phylogenetically Annotated Orthology Resource Based on 5090 Organisms and 2502 Viruses},
   shorttitle = {{{eggNOG}} 5.0},
-  author = {Huerta-Cepas, Jaime and Szklarczyk, Damian and Heller, Davide and Hern\'andez-Plaza, Ana and Forslund, Sofia K. and Cook, Helen and Mende, Daniel R. and Letunic, Ivica and Rattei, Thomas and Jensen, Lars J. and von Mering, Christian and Bork, Peer},
+  author = {Huerta-Cepas, Jaime and Szklarczyk, Damian and Heller, Davide and Hernández-Plaza, Ana and Forslund, Sofia K. and Cook, Helen and Mende, Daniel R. and Letunic, Ivica and Rattei, Thomas and Jensen, Lars J. and von Mering, Christian and Bork, Peer},
   date = {2019-01-08},
-  journaltitle = {Nucleic Acids Res},
+  journaltitle = {Nucleic Acids Res.},
   volume = {47},
   pages = {D309-D314},
   publisher = {{Oxford Academic}},
@@ -287,7 +302,7 @@
   shorttitle = {Prodigal},
   author = {Hyatt, Doug and Chen, Gwo-Liang and LoCascio, Philip F. and Land, Miriam L. and Larimer, Frank W. and Hauser, Loren J.},
   date = {2010-03-08},
-  journaltitle = {BMC Bioinformatics},
+  journaltitle = {BMC Bioinf.},
   volume = {11},
   pages = {119},
   issn = {1471-2105},
@@ -301,7 +316,7 @@
   date = {2015-10},
   journaltitle = {Ecotoxicology},
   volume = {24},
-  pages = {1548--56},
+  pages = {1548--1556},
   issn = {1573-3017},
   doi = {10.1007/s10646-015-1511-z},
   issue = {7-8},
@@ -311,7 +326,7 @@
 
 @article{Korlevic2016,
   title = {Bacterial Diversity across a Highly Stratified Ecosystem: A Salt-Wedge {{Mediterranean}} Estuary},
-  author = {Korlevi\'c, M. and \v{S}upraha, L. and Ljube\v{s}i\'c, Z. and Henderiks, J. and Ciglene\v{c}ki, I. and Dautovi\'c, J. and Orli\'c, S.},
+  author = {Korlević, M. and Šupraha, L. and Ljubešić, Z. and Henderiks, J. and Ciglenečki, I. and Dautović, J. and Orlić, S.},
   date = {2016-09},
   journaltitle = {Syst. Appl. Microbiol.},
   volume = {39},
@@ -361,7 +376,7 @@
 
 @article{Leary2014,
   title = {Integrated Metagenomic and Metaproteomic Analyses of Marine Biofilm Communities},
-  author = {Leary, Dagmar H. and Li, Robert W. and Hamdan, Leila J. and IV, W. Judson Hervey and Lebedev, Nikolai and Wang, Zheng and Deschamps, Jeffrey R. and Kusterbeck, Anne W. and Vora, Gary J.},
+  author = {Leary, Dagmar H. and Li, Robert W. and Hamdan, Leila J. and Judson Hervey IV, W. and Lebedev, Nikolai and Wang, Zheng and Deschamps, Jeffrey R. and Kusterbeck, Anne W. and Vora, Gary J.},
   date = {2014-11-26},
   journaltitle = {Biofouling},
   volume = {30},
@@ -404,7 +419,7 @@
 
 @article{Longford2007,
   title = {Comparisons of Diversity of Bacterial Communities Associated with Three Sessile Marine Eukaryotes},
-  author = {Longford, SR and Tujula, NA and Crocetti, GR and Holmes, AJ and Holmstr\"om, C and Kjelleberg, S and Steinberg, PD and Taylor, MW},
+  author = {Longford, SR and Tujula, NA and Crocetti, GR and Holmes, AJ and Holmström, C and Kjelleberg, S and Steinberg, PD and Taylor, MW},
   date = {2007-08},
   journaltitle = {Aquat. Microb. Ecol.},
   volume = {48},
@@ -433,7 +448,7 @@
   author = {Michelou, Vanessa K. and Caporaso, J. Gregory and Knight, Rob and Palumbi, Stephen R.},
   editor = {Harder, Tilmann},
   date = {2013-06},
-  journaltitle = {PloS One},
+  journaltitle = {PLoS One},
   volume = {8},
   pages = {e67480},
   publisher = {{Public Library of Science}},
@@ -445,7 +460,7 @@
 
 @article{Morrissey2019,
   title = {Disentangling the Influence of Environment, Host Specificity and Thallus Differentiation on Bacterial Communities in Siphonous Green Seaweeds.},
-  author = {Morrissey, Kathryn Lee and \c{C}avas, Levent and Willems, Anne and De Clerck, Olivier},
+  author = {Morrissey, Kathryn Lee and Çavas, Levent and Willems, Anne and De Clerck, Olivier},
   date = {2019},
   journaltitle = {Front. Microbiol.},
   volume = {10},
@@ -460,7 +475,7 @@
 
 @article{Najdek2020,
   title = {Dynamics of Environmental Conditions during the Decline of a {{{\emph{Cymodocea nodosa}}}} Meadow},
-  author = {Najdek, Mirjana and Korlevi\'c, Marino and Paliaga, Paolo and Markovski, Marsej and Ivan\v{c}i\'c, Ingrid and Ive\v{s}a, Ljiljana and Felja, Igor and Herndl, Gerhard J.},
+  author = {Najdek, Mirjana and Korlević, Marino and Paliaga, Paolo and Markovski, Marsej and Ivančić, Ingrid and Iveša, Ljiljana and Felja, Igor and Herndl, Gerhard J.},
   date = {2020-06-30},
   journaltitle = {Biogeosciences},
   volume = {17},
@@ -479,8 +494,8 @@
 }
 
 @article{Noges2010,
-  title = {Primary Production of Aquatic Macrophytes and Their Epiphytes in Two Shallow Lakes ({{Peipsi}} and {{V\~ortsj\"arv}}) in {{Estonia}}},
-  author = {N\~oges, Tiina and Luup, Helen and Feldmann, T\~onu},
+  title = {Primary Production of Aquatic Macrophytes and Their Epiphytes in Two Shallow Lakes ({{Peipsi}} and {{Võrtsjärv}}) in {{Estonia}}},
+  author = {Nõges, Tiina and Luup, Helen and Feldmann, Tõnu},
   date = {2010-03},
   journaltitle = {Aquat. Ecol.},
   volume = {44},
@@ -507,7 +522,7 @@
 
 @article{Quast2013,
   title = {The {{SILVA}} Ribosomal {{RNA}} Gene Database Project: Improved Data Processing and Web-Based Tools.},
-  author = {Quast, Christian and Pruesse, Elmar and Yilmaz, Pelin and Gerken, Jan and Schweer, Timmy and Yarza, Pablo and Peplies, J\"org and Gl\"ockner, Frank Oliver},
+  author = {Quast, Christian and Pruesse, Elmar and Yilmaz, Pelin and Gerken, Jan and Schweer, Timmy and Yarza, Pablo and Peplies, Jörg and Glöckner, Frank Oliver},
   date = {2013-01},
   journaltitle = {Nucleic Acids Res.},
   volume = {41},
@@ -528,7 +543,7 @@
 
 @article{Reyes2001,
   title = {Biomass and Production of the Epiphytes on the Leaves of {{{\emph{Cymodocea nodosa}}}} in the {{Canary Islands}}},
-  author = {Reyes, J. and Sans\'on, M.},
+  author = {Reyes, J. and Sansón, M.},
   date = {2001-08},
   journaltitle = {Bot. Mar.},
   volume = {44},
@@ -630,7 +645,7 @@
 
 @article{Uku2007,
   title = {Characterization and Comparison of Prokaryotic Epiphytes Associated with Three {{East African}} Seagrasses},
-  author = {Uku, Jacqueline and Bj\"ork, Mats and Bergman, Birgitta and D\'iez, Beatriz},
+  author = {Uku, Jacqueline and Björk, Mats and Bergman, Birgitta and Díez, Beatriz},
   date = {2007-08},
   journaltitle = {J. Phycol.},
   volume = {43},
@@ -645,7 +660,7 @@
 
 @article{Verlaque2003,
   title = {On the Identity and Origin of the {{Mediterranean}} Invasive {{{\emph{Caulerpa racemosa}}}} ({{Caulerpales}}, {{Chlorophyta}})},
-  author = {Verlaque, Marc and Durand, Christine and Huisman, John M and Boudouresque, Charles-Fran\c{c}ois and Le Parco, Yannick},
+  author = {Verlaque, Marc and Durand, Christine and Huisman, John M and Boudouresque, Charles-François and Le Parco, Yannick},
   date = {2003-11},
   journaltitle = {Eur. J. Phycol.},
   volume = {38},
@@ -670,7 +685,7 @@
 
 @article{Wickham2019,
   title = {Welcome to the Tidyverse},
-  author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, Lucy D'Agostino and Fran\c{c}ois, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan Milton and M\"uller, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
+  author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, Lucy D'Agostino and François, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan Milton and Müller, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
   date = {2019},
   journaltitle = {J. Open Source Softw.},
   volume = {4},
@@ -701,7 +716,7 @@
 
 @article{Wisniewski2009,
   title = {Universal Sample Preparation Method for Proteome Analysis},
-  author = {Wi\'sniewski, Jacek R and Zougman, Alexandre and Nagaraj, Nagarjuna and Mann, Matthias},
+  author = {Wiśniewski, Jacek R and Zougman, Alexandre and Nagaraj, Nagarjuna and Mann, Matthias},
   date = {2009-05},
   journaltitle = {Nat. Methods},
   volume = {6},
@@ -713,7 +728,7 @@
 }
 
 @incollection{Xie2014,
-  title = {{{ knitr}}: A Comprehensive Tool for Reproducible Research in {{R}}},
+  title = {{{knitr}}: A Comprehensive Tool for Reproducible Research in {{R}}},
   booktitle = {Implementing {{Reproducible Computational Research}}},
   author = {Xie, Yihui},
   editor = {Stodden, Victoria and Leisch, Friedrich and Peng, Roger D},
@@ -752,15 +767,15 @@
   number = {1}
 }
 
-@software{Xie2020,
+@software{Xie2019b,
   title = {{{tinytex}}: Helper Functions to Install and Maintain '{{TeX Live}}', and Compile '{{LaTeX}}' Documents},
   author = {Xie, Yihui},
-  date = {2020}
+  date = {2019}
 }
 
 @article{Yilmaz2014,
   title = {The {{SILVA}} and "{{All}}-{{Species Living Tree Project}} ({{LTP}})" Taxonomic Frameworks},
-  author = {Yilmaz, Pelin and Parfrey, Laura Wegener and Yarza, Pablo and Gerken, Jan and Pruesse, Elmar and Quast, Christian and Schweer, Timmy and Peplies, J\"org and Ludwig, Wolfgang and Gl\"ockner, Frank Oliver},
+  author = {Yilmaz, Pelin and Parfrey, Laura Wegener and Yarza, Pablo and Gerken, Jan and Pruesse, Elmar and Quast, Christian and Schweer, Timmy and Peplies, Jörg and Ludwig, Wolfgang and Glöckner, Frank Oliver},
   date = {2014-01},
   journaltitle = {Nucleic Acids Res.},
   volume = {42},
